Fix button thêm, 2 form báo cáo

--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                     <div class="row">
                         <div class="col col-full phieu-content">
                             <label for="" class="phieu-label">Tên loại hàng hóa</label>
-                            <select name="tenloaiHH" id="" class= "phieu-input" placeholder="Tên loại hàng hóa">
+                            <select name="tenloaiHH" id="" class= "phieu-input" placeholder="Tên loại hàng hóa" name="tenloaiHH">
                                 <option value="">Vải</option>
                                 <option value="">Phụ liệu may</option>
                                 <option value="">Phụ liệu đóng gói</option>
@@ -976,7 +976,7 @@
 
                         <div class="col col-full phieu-content">
                             <label for="" class="phieu-label">Tên hàng hóa</label>
-                            <select name="tenloaiHH" id="" class= "phieu-input" placeholder="Tên hàng hóa">
+                            <select name="tenloaiHH" id="" class= "phieu-input" placeholder="Tên hàng hóa" name="tenHH">
                                 <option value="">Vải cotton</option>
                                 <option value="">Thun lạnh</option>
                                 <option value="">Nút</option>
@@ -1000,17 +1000,22 @@
                         <thead>
                             <tr class="table-header">
                                 <th>Ngày nhập kho</th>
+                                <th>Mã báo cáo</th>
                                 <th>Mã loại hàng hóa</th>
                                 <th>Tên loại hàng hóa</th>
                                 <th>Mã hàng hóa</th>
                                 <th>Tên hàng hóa</th>
-                                <th>Số lượng nhập</th>
+                                <th>Tổng số lượng nhập</th>
                             </tr>
                         </thead>
                         <tbody>
 
                         </tbody>
+
                     </table>
+                    <div class="row-btn">
+                        <button class="btn btn-BaoCao">IN BÁO CÁO</button>
+                    </div>
                 </div>
                     
             </div>
@@ -1058,17 +1063,21 @@
                         <thead>
                             <tr class="table-header">
                                 <th>Ngày xuất kho</th>
+                                <th>Mã báo cáo</th>
                                 <th>Mã loại hàng hóa</th>
                                 <th>Tên loại hàng hóa</th>
                                 <th>Mã hàng hóa</th>
                                 <th>Tên hàng hóa</th>
-                                <th>Số lượng xuất</th>
+                                <th>Tổng số lượng xuất</th>
                             </tr>
                         </thead>
                         <tbody>
 
                         </tbody>
                     </table>
+                    <div class="row-btn">
+                        <button class="btn btn-BaoCao">IN BÁO CÁO</button>
+                    </div>
                 </div>
                     
             </div>
